--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -14,6 +14,9 @@
   flex-direction: column;
 }
 .contactText {
+  display: flex;
+  align-items: center;
+  gap: 4px;
   font-size: 16px;
   font-weight: bold;
   line-height: 1.5; /* 150% */
